--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>Hello, Shivam Kumar</p>
-    <p>I hope, you are fine</p>
-    <p>here I am also fine</p>
+    <div>
+        <label for="username">
+         Username :   <input type="email" id="username">
+        </label>
+        <label for="password">
+         Password :   <input type="email" id="password">
+        </label>
+
+        <button type="submit">Submit</button>
+    </div>
 </body>
 </html>
